src/test/deca/syntax/valid/sansObjet/conditionIf.deca
{
    int x = 0;
    if (x == 0){
        print("x vaut zero");
    }
}
