src/test/deca/syntax/invalid/sansObjet/IfExpressionFalse13.deca
{
    int x=2;
    if (x=2;){
        println("x=2");
    }
}